Fixed the frontend

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 .env
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
